# jailkit

./: COPYRIGHT  INSTALL.txt  Makefile.in  README.txt  configure  configure.ac
debian/: changelog  conffiles  control  copyright  dirs  postinst  postrm  prerm  rules
extra/: jailkit
ini/: jk_check.ini  jk_init.ini  jk_lsh.ini  jk_socketd.ini
man/: Makefile.in  jailkit.8  jk_addjailuser.8  jk_check.8  jk_chrootlaunch.8  jk_chrootsh.8  jk_cp.8  jk_init.8  jk_jailuser.8  jk_list.8  jk_lsh.8  jk_procmailwrapper.8  jk_socketd.8  jk_uchroot.8  jk_update.8
py/: Makefile.in  jk_addjailuser.in  jk_check.in  jk_cp.in  jk_init.in  jk_jailuser.in  jk_lib.py  jk_list.in  jk_update.in
src/: Makefile.in  config.h.in  iniparser.c  iniparser.h  iniparsertester.c  iniparsertester.ini  jk_chrootlaunch.c  jk_chrootsh.c  jk_lib.c  jk_lib.h  jk_lsh.c  jk_procmailwrapper.c  jk_socketd.c  jk_uchroot.c  passwdparser.c  passwdparser.h  passwdparsertester.test  utils.c  utils.h  wordexp.c  wordexp.h
